--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-torch
-transformers
-sentence-transformers
-nltk
-numpy
-Levenshtein
+torch>=2.0.0
+transformers>=4.30.0
+sentence-transformers>=2.2.0
+nltk>=3.8.0
+openai>=1.0.0
+numpy>=1.24.0
+Levenshtein>=0.21.0
+datasets>=2.14.0
+llmlingua>=0.1.0
+tqdm>=4.65.0
